# zones_convolver

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: zones_convolver_tests.yml
cmake/: AddCatch2.cmake  AddJuce.cmake  AddMelatonin.cmake
garcia_optimal_partitioning/: PartitionScheme.cpp  PartitionScheme.h  convert_results.py  garcia_optimal_partitioning.py  garcia_results_1024.json  garcia_results_128.json  garcia_results_16.json  garcia_results_2048.json  garcia_results_256.json  garcia_results_512.json  garcia_results_64.json  pyproject.toml  sol_1.py  sol_2.py  sol_3.py
garcia_optimal_partitioning/results/: garcia_results_32.json  garcia_results_4096.json
test/: CMakeLists.txt  ComplexBufferTests.cpp  ConvolverTests.cpp  DecompositionScheduleTests.cpp  DecompositionTestBed.cpp  FFTDecompositionTests.cpp  FFTTests.cpp  LambdaPtrConverter.h  SplitBlockTests.cpp  TestUtils.cpp  TestUtils.h
tests/: ConvolverUtilitiesTests.cpp
zones_convolver/: ConvolutionEngine.cpp  ConvolutionEngine.h  Convolver.cpp  Convolver.h  ConvolverUtilities.cpp  ConvolverUtilities.h  NonUniformPartitionedConvolver.cpp  NonUniformPartitionedConvolver.h  PartitionSchemes.cpp  PartitionSchemes.h  TimeDistributedNUPC.cpp  TimeDistributedNUPC.h  TimeDistributedUPC.cpp  TimeDistributedUPC.h  TimeDistributedUPCMulti.cpp  TimeDistributedUPCMulti.h  UniformPartitionedConvolver.cpp  UniformPartitionedConvolver.h  zones_convolver.cpp  zones_convolver.h
zones_convolver/time_distributed/: TimeDistributedNUPC.cpp  TimeDistributedNUPC.h  TimeDistributedUPC.cpp  TimeDistributedUPC.h  TimeDistributedUPCMulti.cpp  TimeDistributedUPCMulti.h
zones_convolver/util/: CircularBuffer.cpp  CircularBuffer.h  ComplexBuffer.cpp  ComplexBuffer.h  DecompositionSchedule.cpp  DecompositionSchedule.h  FFT.cpp  FFT.h  FFTDecomposition.cpp  FFTDecomposition.h  FrequencyDelayLine.cpp  FrequencyDelayLine.h  Partitioning.cpp  Partitioning.h  SplitBlock.cpp  SplitBlock.h  TimeDomainConvolver.cpp  TimeDomainConvolver.h
