[tool.poetry]
name = "garcia-optimal-partitioning"
version = "0.1.0"
description = ""
authors = ["LeonPS <leon@leonps.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^3.2.1"
matplotlib = "^3.8.2"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

